[package]
name = "hurl"
version = "0.99.13"
authors = ["Fabrice Reix <fabrice.reix@orange.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "hurl"

[features]
# Treat warnings as a build error.
strict = []


[dependencies]
clap = "2.33.0"
structopt = "0.2.10"
libxml = "0.2.12"
regex = "1.1.0"
serde_json = "1.0.40"
xmlparser = "0.10.0"
roxmltree = "0.7.1"
serde-xml-rs = "0.3.1"
atty = "0.2.13"
url = "2.1.0"
sxd-document = "0.3.2"
serde = "1.0.104"
base64 = "0.11.0"
float-cmp = "0.6.0"
encoding = "0.2"
chrono = "0.4.11"
curl = "0.4.33"

#[dev-dependencies]
proptest = "0.9.4"

[package.metadata.deb]
assets = [
  ["target/release/hurl", "usr/bin/", "755"],
  ["target/release/hurlfmt", "usr/bin/", "755"],
  ["target/man/hurl.1.gz", "usr/share/man/man1/hurl.1.gz", "644"],
  ["target/man/hurlfmt.1.gz", "usr/share/man/man1/hurlfmt.1.gz", "644"]
]


