[workspace]
members = [
    "packages/hurl",
    "packages/hurlfmt",
    "packages/hurl_core",
]
resolver = "2"

[profile.release]
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

